Add a Defect resource and support GET (with unit tests, acceptance tests, and updated doc)
